@@ -1,7 +1,10 @@
 AUX x2goclient-3.00.1-ldap.patch 5046 RMD160 90aa4e09c391fed6d7770ba73d2733c3cac3cdcf SHA1 0dc0e98d9d6d4af723799e6049d5afacedbacfbe SHA256 f381a333083d400d838515d6444322497c843039e852b96315bad7f56e8b02e7
 AUX x2goclient-3.00.1-noldap.patch 1352 RMD160 ea7066d0eba1d0b1bb2909dc5e7b6477ce21c5a2 SHA1 f99023279d09decb148857381b75d1f1c2d5a10f SHA256 2d89e7f57b8bfdf8a6caf89eddb7afc390ebbbda24cf59c839387998c2934283
 DIST x2goclient_3.00-1.tar.gz 664378 RMD160 89e4fd4838cd14299032bbee4d6fb0878c4ae513 SHA1 8cdb5fcc9d8c8384189dd6ed82eb0207c80d366b SHA256 95e8625e5b613082220d98c0b406b029f8420da92f83303b0040ed2f43498b45
-EBUILD x2goclient-3.00.1.ebuild 1785 RMD160 944a1bfb5849b0d793cf4272b8ab4437cca9d0e0 SHA1 247640460f8acfe8b634bbb8e09da7a57697b5ea SHA256 b5665eada8c4701fba99c3821281928a2f9f206721d87fffffba8e6d8ccf776a
-EBUILD x2goclient-3.01.3.ebuild 1785 RMD160 944a1bfb5849b0d793cf4272b8ab4437cca9d0e0 SHA1 247640460f8acfe8b634bbb8e09da7a57697b5ea SHA256 b5665eada8c4701fba99c3821281928a2f9f206721d87fffffba8e6d8ccf776a
-MISC ChangeLog 611 RMD160 71e03804a047a5d4b10d0c3537f00f1c1517a755 SHA1 83462cdff8652547ee01f8398d16705a5ced517e SHA256 c25b6652f6e3bedf7772d124b2615b3d2b118abfb60688bab8d131e4425530b6
+DIST x2goclient_3.01-3.tar.gz 764833 RMD160 e997dd19c3894cf48dbd15e205b7aefa65813596 SHA1 03d979b0ac7c4f24e409bd69f33f855784fe83cf SHA256 e600a2f0d1cb8cc9a0df3155d0130f90338d7466ade20e80a4ac372381c6422f
+DIST x2goclient_3.01-5.tar.gz 10274153 RMD160 d0cd000d6d235e29dbd17da292b6784ada000f64 SHA1 916a02a78febbfd6fe3d74e101e1eb46597e7bde SHA256 ce671a628b17614bdcf443bd5ff22f644ceca1dad634c8823fcad8438a3751e3
+EBUILD x2goclient-3.00.1.ebuild 1784 RMD160 06b7b09bd81a2ea1dd8ef4e2c18a41242fb5f8fd SHA1 3f7ec6ef96ad4e55ffd7b72e35dde8b5f0dd6be3 SHA256 4883bd637ca925549eda9c120a0ae579b2365fe394db514fddb7d306d5453afb
+EBUILD x2goclient-3.01.3.ebuild 1784 RMD160 06b7b09bd81a2ea1dd8ef4e2c18a41242fb5f8fd SHA1 3f7ec6ef96ad4e55ffd7b72e35dde8b5f0dd6be3 SHA256 4883bd637ca925549eda9c120a0ae579b2365fe394db514fddb7d306d5453afb
+EBUILD x2goclient-3.01.5.ebuild 1866 RMD160 f51dc5c8f0ed767ff3eeea0e897fd75222150179 SHA1 5e2852b7b556f253986d60d8ff62466b50ae46fb SHA256 a47c03b1cf5c6d0bdaee21c91f865145eaafba64674ab42b96a7ea999c61b486
+MISC ChangeLog 814 RMD160 dd2cc5bcb6e84702e420d36f699570338d8b3709 SHA1 8ded7062bbd0982e3d0e4f1b435f8e46b03b0448 SHA256 0dbfac746a8630b6c8b880932d449b7d9324eb7e737cc9464cf0ddb641033db1
 MISC metadata.xml 211 RMD160 7569a339443bfffd41ebdb1db3683d6bbcd2fe5b SHA1 84050eff2270b3218cf8eb00363fe12ecdadfe2e SHA256 a6b5a5387c7e7f441d794c61edf1718caa3c58ffbf9b595ec536ff9617a7471f
