@@ -3,8 +3,10 @@ AUX x2goserver.init 493 RMD160 5633609c39c43c7d810712cecb89cf947329862d SHA1 a60
 DIST x2goserver_2.0.1-19_all.deb 14536 RMD160 9052af7fe76051d13dbda6b8ca4dd0192e88218a SHA1 5610b16b5529ea65bd19bfee7a7a9dfc8079b716 SHA256 513173c738dfa6a4e379ccb1a99eaff46803ad08a325073fbca8b76b6be76d56
 DIST x2goserver_3.0.0-1_all.deb 15000 RMD160 ce8d06fefa8426cedaf9ac64bc60af17de8cc905 SHA1 90b6377d8e02f66bc396a4279c32f3d25266088f SHA256 99b5bd556f2cdb9bb399b9c35efa4b8406f23a8ea766d84a060a0e1671c468ba
 DIST x2goserver_3.0.1-1_all.deb 15888 RMD160 f2ec0b2ba67bcc61973adf2152f8411198a63a2e SHA1 082acf589e6c844c2705a03328a68387b39d8900 SHA256 ac2aaf6f9a90f62f76281d782ab251cca4c53ff38a5e9d6b301f3897228efd5e
-EBUILD x2goserver-2.0.1.19.ebuild 1723 RMD160 b8bce1018b13defa02c67ecb66ce22a3cdcd9fee SHA1 26ce63cf85bd8dbfb3c02dd18534e86e8a75d58f SHA256 d10ddef4322cf7894abb98ec8b314e31c56b3ea03fb03bf3e842f1050d813e23
-EBUILD x2goserver-3.0.0.1.ebuild 1907 RMD160 c9af82dee9fcaafdd2cb4dfd9d2b0da8dbac500a SHA1 6ba6ba32c83f5dd91b690b23358a1fda420f29e2 SHA256 56d0f6abe3e26f3b1b1e8aeff94ade69109a348f893d4cf803a0db236b5d45a9
+DIST x2goserver_3.0.1-5_all.deb 16806 RMD160 cdfd9cb079c7a4d4f943be6fd13e0d3ec2b04182 SHA1 735807f16e95b7897a766c484fd6f08888e08369 SHA256 408c4dc52af8b2c93c7afeab40ce0e4588e226f45cceee4f3013de93623022c9
+EBUILD x2goserver-2.0.1.19.ebuild 1723 RMD160 08e57cc4d2389c5aa99b5896168bc494dc959fa2 SHA1 17add51024f5a5268c6cd3adff83bd2fe0fe0761 SHA256 209906e4d732e1d2ede75519efd797a847f49cffe60837f599a70dd2f6b0f8e5
+EBUILD x2goserver-3.0.0.1.ebuild 1907 RMD160 f4056c7a9c0d4c70c2f79d00ea31f0b1e5b42ecc SHA1 02636a263e61e6046c314c4c2b135a92b17876b6 SHA256 a5de705abfa04cf40500d57212ad0eb8672752de47023a11758dc361cd21164f
 EBUILD x2goserver-3.0.1.1.ebuild 2459 RMD160 feff1484fb45feb243ede856cdb36a5b1797f672 SHA1 fc568f4fa11ec4a4b943d81a6e8eb7d8dd2ec952 SHA256 a794dafedae53d4b64e0e73aa5b53e7cb3d6e9a9720e0402df02b9107cd09e93
-MISC ChangeLog 940 RMD160 222ce9374438f397398e15a3779d395d84a0b5a8 SHA1 a76894cac93fb7ed9fc22609d8c71d014c0581ce SHA256 496ee609b90614440335bab159657ae9930dcdb009284dee629d253c3441e602
+EBUILD x2goserver-3.0.1.5.ebuild 2540 RMD160 a2aa7d6f7c259ce2d364858b347d3d257a4c80e4 SHA1 c4e17a82e57cd025dc6175cd061433f79da1cae3 SHA256 42992abd2ce20e2150c35e500b1437f30be82dca5882ad8917b4d0a47c026fa5
+MISC ChangeLog 1213 RMD160 4226f649ada2f96a14ae6f1f2adbc0bd9c000413 SHA1 5d3ff83d8b26a467458a5ff591638331ef8c7b97 SHA256 4ce51391005fdf4c0343a5d75143b4003368f4ddefd9326dc6455debff3c4565
 MISC metadata.xml 307 RMD160 0172cd4fc792a41fde528ec788ab0dd98f3d21bc SHA1 953412d99904e25f4845fdfda587298e7cbc7f2a SHA256 b19b0330b6614bc27421032b94f6ade24661e38c818140c598d50cb91e82bce6
